# tty1

./: .biome.jsonc  .dockerignore  .gitignore  .mise.toml  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  biome.json  docker-compose.yml
.claude/skills/: release.md
.github/workflows/: release.yml
src/: cache.rs  client.rs  config.rs  main.rs  render.rs  routes.rs  worker.rs
src/providers/: github.rs  hackernews.rs  mod.rs  reddit.rs
src/render/: dashboard.rs  mod.rs  settings.rs  shell.rs  utils.rs
src/static/: app.js  common.css  common.js  dashboard.css  manifest.json  settings.css  settings.js  state.js  style.css  sw.js
